Bug 1716316 - Fix scrollbar in chat conversations list. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D127265

--HG--
extra : amend_source : 9157fd4bd87c6b37edfc8c45e20bab4ef82376f0

--- a/mail/themes/shared/mail/chat.css
+++ b/mail/themes/shared/mail/chat.css
@@ -122,7 +122,6 @@
   /* make it possible to let the children overwrite the end border.
      margin-inline-start because of the inverted direction */
   margin-inline-start: -1px;
-  pointer-events: none;
 }
 
 /* move the scrollbar to the left */
